# ot_cv

./: .gitignore  README.md  pyproject.toml
notebook/: color_transfer.ipynb  color_transfer_colab.ipynb  sample_sinkhorn.ipynb
