[tool.poetry]
name = "ot_cv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
imageio = "^2.21.3"
torch = "^1.12.1"
geomloss = "^0.2.5"
jupyterlab = "^3.4.7"
pykeops = "^2.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
jupyterlab-lsp = "^3.10.2"
jupyterlab-code-formatter = "^1.5.3"
python-lsp-server = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
